--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -2,7 +2,7 @@ name:            pandoc
 version:         2.1.2
 cabal-version:   >= 1.10
 build-type:      Custom
-license:         GPL
+license:         GPL-2
 license-file:    COPYING.md
 copyright:       (c) 2006-2018 John MacFarlane
 author:          John MacFarlane <jgm@berkeley.edu>
