--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -563,6 +563,8 @@ library
 
 executable pandoc
   build-depends: pandoc, base >= 4.7 && < 5
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
   ghc-options:   -rtsopts -with-rtsopts=-K16m -Wall -fno-warn-unused-do-bind -threaded
   if flag(static)
     ld-options:     -static
@@ -588,6 +590,8 @@ executable trypandoc
     buildable:     True
   else
     buildable:     False
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
 
 executable weigh-pandoc
   main-is:         weigh-pandoc.hs
@@ -602,6 +606,8 @@ executable weigh-pandoc
      buildable:       True
   else
     buildable:     False
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
   ghc-options:   -rtsopts -Wall -fno-warn-unused-do-bind
   default-language: Haskell98
 
@@ -632,6 +638,8 @@ test-suite test-pandoc
                   zip-archive >= 0.2.3.4 && < 0.4,
                   xml >= 1.3.12 && < 1.4,
                   Glob >= 0.7 && < 0.10
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
   if flag(old-locale)
      build-depends: old-locale >= 1 && < 1.1,
                     time >= 1.2 && < 1.5
@@ -698,5 +706,7 @@ benchmark benchmark-pandoc
                    base >= 4.2 && < 5,
                    text >= 0.11 && < 1.3,
                    criterion >= 1.0 && < 1.5
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
   ghc-options:   -rtsopts -Wall -fno-warn-unused-do-bind
   default-language: Haskell98
