--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -343,10 +343,6 @@ flag network-uri
   Description:   Get Network.URI from the network-uri package
   Default:       True
 
-flag old-locale
-  Description:   Use old-locale and time < 1.5
-  Default:       False
-
 custom-setup
   setup-depends: base, Cabal
 
@@ -363,6 +359,7 @@ library
                  directory >= 1 && < 1.4,
                  bytestring >= 0.9 && < 0.11,
                  text >= 0.11 && < 1.3,
+                 time >= 1.5 && < 1.10,
                  safe >= 0.3 && < 0.4,
                  zip-archive >= 0.2.3.4 && < 0.4,
                  HTTP >= 4000.0.5 && < 4000.4,
@@ -408,11 +405,6 @@ library
     cpp-options:      -D_WINDOWS
   else
     build-depends:  unix >= 2.4 && < 2.8
-  if flag(old-locale)
-     build-depends: old-locale >= 1 && < 1.1,
-                    time >= 1.2 && < 1.5
-  else
-     build-depends: time >= 1.5 && < 1.10
   if flag(network-uri)
      build-depends: network-uri >= 2.6 && < 2.7, network >= 2.6
   else
@@ -556,7 +548,6 @@ library
                    Text.Pandoc.UUID,
                    Text.Pandoc.Translations,
                    Text.Pandoc.Slides,
-                   Text.Pandoc.Compat.Time,
                    Paths_pandoc
 
   buildable:       True
@@ -652,11 +643,6 @@ test-suite test-pandoc
      hs-source-dirs: prelude
      other-modules:  Prelude
      build-depends:  base-compat >= 0.9
-  if flag(old-locale)
-     build-depends: old-locale >= 1 && < 1.1,
-                    time >= 1.2 && < 1.5
-  else
-     build-depends: time >= 1.5 && < 1.10
   other-modules:  Tests.Old
                   Tests.Command
                   Tests.Helpers
