--- a/stack.lts9.yaml
+++ b/stack.lts9.yaml
@@ -12,15 +12,17 @@ flags:
 packages:
 - '.'
 extra-deps:
-- hslua-0.9.5
-- hslua-module-text-0.1.2
+- hslua-0.9.5.1
+- hslua-module-text-0.1.2.1
 - skylighting-0.7.0.2
-- ansi-terminal-0.7.1.1
+- skylighting-core-0.7.0.2
+- ansi-terminal-0.8.0.2
 - texmath-0.10.1.1
-- cmark-gfm-0.1.1
-- QuickCheck-2.10.0.1
+- cmark-gfm-0.1.3
+- QuickCheck-2.11.3
+- tasty-1.0.1.1
 - tasty-quickcheck-0.9.1
-- doctemplates-0.2.1
+- doctemplates-0.2.2.1
 - haddock-library-1.4.3
 - hs-bibutils-6.2.0.1
 - pandoc-citeproc-0.14.2
