--- a/stack.yaml
+++ b/stack.yaml
@@ -18,6 +18,9 @@ extra-deps:
 - ansi-terminal-0.8.0.2
 - tasty-1.0.1.1
 - pandoc-types-1.17.4.2
+- cmark-gfm-0.1.3
+- haddock-library-1.5.0.1
+- hslua-module-text-0.1.2.1
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-10.10
