Fix Haskell link in README.

--- a/README.template
+++ b/README.template
@@ -87,3 +87,4 @@ License
 any kind.  (See COPYRIGHT for full copyright and warranty notices.)
 
 [GPL]: http://www.gnu.org/copyleft/gpl.html "GNU General Public License"
+[Haskell]: http://haskell.org
