--- a/linux/Dockerfile
+++ b/linux/Dockerfile
@@ -8,9 +8,10 @@ ADD https://raw.githubusercontent.com/mitchty/alpine-ghc/master/mitch.tishmack%4
 RUN apk update
 RUN apk add alpine-sdk git ca-certificates ghc gmp-dev zlib-dev bash dpkg fakeroot
 # GRAB A RECENT BINARY OF STACK
-RUN curl -L https://www.stackage.org/stack/linux-x86_64-static | tar xz --wildcards --strip-components=1 -C /usr/local/bin '*/stack'
+RUN curl -L https://github.com/commercialhaskell/stack/releases/download/v1.6.5/stack-1.6.5-linux-x86_64-static.tar.gz | tar xz --wildcards --strip-components=1 -C /usr/local/bin '*/stack'
 # COMPRESS WITH UPX
 ADD https://github.com/lalyos/docker-upx/releases/download/v3.91/upx /usr/local/bin/upx
+ENV PATH="/usr/local/bin:${PATH}"
 RUN chmod 755 /usr/local/bin/upx
 RUN ulimit -n 4096
 RUN stack config set system-ghc --global true
