--- a/stack.yaml
+++ b/stack.yaml
@@ -22,6 +22,7 @@ extra-deps:
 - cmark-gfm-0.1.3
 - hslua-module-text-0.1.2.1
 - texmath-0.11
+- haddock-library-1.6.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-10.10
