--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -335,10 +335,6 @@ flag trypandoc
   Description:   Build trypandoc cgi executable.
   Default:       False
 
-flag network-uri
-  Description:   Get Network.URI from the network-uri package
-  Default:       True
-
 custom-setup
   setup-depends: base, Cabal >= 2.0
 
@@ -387,6 +383,8 @@ library
                  Glob >= 0.7 && < 0.10,
                  cmark-gfm >= 0.1.1 && < 0.2,
                  doctemplates >= 0.2.1 && < 0.3,
+                 network-uri >= 2.6 && < 2.7,
+                 network >= 2.6,
                  http-client >= 0.4.30 && < 0.6,
                  http-client-tls >= 0.2.4 && < 0.4,
                  http-types >= 0.8 && < 0.13,
@@ -401,10 +399,6 @@ library
     cpp-options:      -D_WINDOWS
   else
     build-depends:  unix >= 2.4 && < 2.8
-  if flag(network-uri)
-     build-depends: network-uri >= 2.6 && < 2.7, network >= 2.6
-  else
-     build-depends: network >= 2 && < 2.6
   if flag(embed_data_files)
      cpp-options:   -DEMBED_DATA_FILES
      build-depends: file-embed >= 0.0 && < 0.1
