travis: Remove '--only-dependencies' step for cabal.
Due to cabal changes, this no longer seems to work.
We get:

> cabal: Cannot select only the dependencies (as requested by the
> '--only-dependencies' flag), the packages are required by a dependency of one
> of the other targets.

I suspect this is because the executable depends on the library?

--- a/.travis.yml
+++ b/.travis.yml
@@ -117,7 +117,6 @@ install:
     cabal)
       cabal --version
       travis_retry cabal update
-      cabal install --disable-optimization --only-dependencies --flags="$FLAGS" --enable-tests --force-reinstalls --reorder-goals --max-backjumps=-1 $CABALARGS
       ;;
   esac
 
@@ -132,8 +131,6 @@ script:
     cabal)
       cabal sdist --output-directory=sourcedist && \
       cd sourcedist && \
-      cabal configure --disable-optimization --enable-tests -v2 --flags="$FLAGS" --ghc-options="$OPTS" $CABALARGS && \
-      cabal build -v2 -j2 && \
-      cabal test
+      cabal install -j2 --disable-optimization --enable-tests --run-tests --enable-benchmarks -v2 --flags="$FLAGS" --ghc-options="$OPTS" $CABALARGS
       ;;
   esac
