--- a/.travis.yml
+++ b/.travis.yml
@@ -117,6 +117,7 @@ install:
     cabal)
       cabal --version
       travis_retry cabal update
+      cabal install Cabal
       cabal install --disable-optimization --only-dependencies --flags="$FLAGS" --enable-tests --force-reinstalls --reorder-goals --max-backjumps=-1 $CABALARGS
       ;;
   esac
