--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -370,7 +370,6 @@ library
                  temporary >= 1.1 && < 1.4,
                  blaze-html >= 0.9 && < 0.10,
                  blaze-markup >= 0.8 && < 0.9,
-                 scientific >= 0.2 && < 0.4,
                  vector >= 0.10 && < 0.13,
                  hslua >= 0.9.5 && < 0.9.6,
                  hslua-module-text >= 0.1.2 && < 0.2,
@@ -387,12 +386,10 @@ library
                  http-client >= 0.4.30 && < 0.6,
                  http-client-tls >= 0.2.4 && < 0.4,
                  http-types >= 0.8 && < 0.13,
-                 case-insensitive >= 1.2 && < 1.3
+                 case-insensitive >= 1.2 && < 1.3,
+                 HsYAML >= 0.1.1.1 && < 0.2
   if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*,
-                   yaml >= 0.8.11 && < 0.8.31
-  else
-    build-depends: yaml >= 0.8.11 && < 0.9
+    build-depends: semigroups == 0.18.*
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
