--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -389,7 +389,10 @@ library
                  case-insensitive >= 1.2 && < 1.3,
                  HsYAML >= 0.1.1.1 && < 0.2
   if impl(ghc < 8.0)
-    build-depends: semigroups == 0.18.*
+    build-depends: semigroups == 0.18.*,
+                   -- basement 0.0.8 drops support for ghc 7.10
+                   -- and it is a transitive dependency:
+                   basement < 0.0.8
   if impl(ghc < 8.4)
      hs-source-dirs: prelude
      other-modules:  Prelude
