--- a/stack.lts10.yaml
+++ b/stack.lts10.yaml
@@ -11,12 +11,19 @@ flags:
 packages:
 - '.'
 extra-deps:
+- pandoc-citeproc-0.14.3.1
 - skylighting-0.7.2
 - skylighting-core-0.7.2
+- ansi-terminal-0.8.0.2
+- tasty-1.0.1.1
+- test-framework-0.8.2.0
 - pandoc-types-1.17.5
+- cmark-gfm-0.1.3
+- hslua-module-text-0.1.2.1
 - texmath-0.11
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
+- text-1.2.3.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
-resolver: lts-11.17
+resolver: lts-10.10
