Use latest network.
Hopefully this will build on Windows.
See https://ci.appveyor.com/project/jgm/pandoc/build/1.0.2625/job/tfpvh7rxue26phoq

--- a/stack.yaml
+++ b/stack.yaml
@@ -14,6 +14,7 @@ extra-deps:
 - pandoc-citeproc-0.14.3.1
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
+- network-2.7.0.2
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-12.0
