--- a/stack.yaml
+++ b/stack.yaml
@@ -15,6 +15,7 @@ extra-deps:
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
 - network-2.7.0.2
+- aeson-pretty-0.8.5
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-12.0
