--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,10 +53,10 @@ test_script:
   # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
   # descriptor
   - |
-      %STACK% setup > nul
+      %STACK% setup --stack-yaml stack.lts11.yaml > nul
       %STACK% path
       echo "" | %STACK% clean
-      echo "" | %STACK% install %STACK_BUILD_OPTS% pandoc pandoc-citeproc %STACK_FLAGS%
+      echo "" | %STACK% install --stack-yaml stack.lts11.yaml %STACK_BUILD_OPTS% pandoc pandoc-citeproc %STACK_FLAGS%
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
