--- a/stack.lts11.yaml
+++ b/stack.lts11.yaml
@@ -20,6 +20,7 @@ extra-deps:
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
 - hs-bibutils-6.6.0.0
+- yaml-0.9.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-11.17
