--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,7 @@ extra-deps:
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
 - network-2.7.0.2
+- yaml-0.9.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-12.6
