--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,17 +3,30 @@ clone_folder: "c:\\pandoc"
 environment:
   global:
     WIXBIN: "c:\\Program Files (x86)\\WiX Toolset v3.11\\bin"
-    STACK_YAML: "c:\\pandoc\\stack.yaml"
     STACK_BUILD_OPTS: "--no-terminal -j1 --no-terminal --test --local-bin-path=.\\windows"
     # see #4201, https://github.com/haskell-tools/haskell-tools/issues/277
   matrix:
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
+    STACK_YAML: "stack.lts11.yaml"
     STACK: "%STACK_ROOT%\\stack.exe"
     STACK_FLAGS: "--flag=hslua:lua_32bits"
     ARCH: "x86"
   - STACK_VERSION: "windows-x86_64"
     STACK_ROOT: "c:\\sr64"
+    STACK_YAML: "stack.lts11.yaml"
+    STACK: "%STACK_ROOT%\\stack.exe"
+    STACK_FLAGS: ""
+    ARCH: "x64"
+  - STACK_VERSION: "windows-i386"
+    STACK_ROOT: "c:\\sr32"
+    STACK_YAML: "stack.yaml"
+    STACK: "%STACK_ROOT%\\stack.exe"
+    STACK_FLAGS: "--flag=hslua:lua_32bits"
+    ARCH: "x86"
+  - STACK_VERSION: "windows-x86_64"
+    STACK_ROOT: "c:\\sr64"
+    STACK_YAML: "stack.yaml"
     STACK: "%STACK_ROOT%\\stack.exe"
     STACK_FLAGS: ""
     ARCH: "x64"
@@ -55,10 +68,10 @@ test_script:
   # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
   # descriptor
   - |
-      %STACK% setup --stack-yaml stack.lts11.yaml > nul
+      %STACK% setup --stack-yaml %STACK_YAML% > nul
       %STACK% path
       echo "" | %STACK% clean
-      echo "" | %STACK% install --stack-yaml stack.lts11.yaml %STACK_BUILD_OPTS% pandoc pandoc-citeproc %STACK_FLAGS%
+      echo "" | %STACK% install --stack-yaml %STACK_YAML% %STACK_BUILD_OPTS% pandoc pandoc-citeproc %STACK_FLAGS%
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
