appveyor: comment out lts-11 builds for now.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,18 +6,18 @@ environment:
     STACK_BUILD_OPTS: "--no-terminal -j1 --no-terminal --test --local-bin-path=.\\windows"
     # see #4201, https://github.com/haskell-tools/haskell-tools/issues/277
   matrix:
-  - STACK_VERSION: "windows-i386"
-    STACK_ROOT: "c:\\sr32"
-    STACK_YAML: "stack.lts11.yaml"
-    STACK: "%STACK_ROOT%\\stack.exe"
-    STACK_FLAGS: "--flag=hslua:lua_32bits"
-    ARCH: "x86"
-  - STACK_VERSION: "windows-x86_64"
-    STACK_ROOT: "c:\\sr64"
-    STACK_YAML: "stack.lts11.yaml"
-    STACK: "%STACK_ROOT%\\stack.exe"
-    STACK_FLAGS: ""
-    ARCH: "x64"
+      #  - STACK_VERSION: "windows-i386"
+      #    STACK_ROOT: "c:\\sr32"
+      #    STACK_YAML: "stack.lts11.yaml"
+      #    STACK: "%STACK_ROOT%\\stack.exe"
+      #    STACK_FLAGS: "--flag=hslua:lua_32bits"
+      #    ARCH: "x86"
+      #  - STACK_VERSION: "windows-x86_64"
+      #    STACK_ROOT: "c:\\sr64"
+      #    STACK_YAML: "stack.lts11.yaml"
+      #    STACK: "%STACK_ROOT%\\stack.exe"
+      #    STACK_FLAGS: ""
+      #    ARCH: "x64"
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
     STACK_YAML: "stack.yaml"
