--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,6 @@ image: Visual Studio 2013
 clone_folder: "c:\\pandoc"
 environment:
   global:
-    WIXBIN: "c:\\Program Files (x86)\\WiX Toolset v3.11\\bin"
     STACK_BUILD_OPTS: "--no-terminal -j1 --no-system-ghc --install-ghc --verbose --test --local-bin-path=.\\windows"
     # see #4201, https://github.com/haskell-tools/haskell-tools/issues/277
   matrix:
@@ -21,15 +20,15 @@ environment:
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
     STACK_YAML: "stack.yaml"
-    STACK: "%STACK_ROOT%\\stack.exe"
     STACK_FLAGS: "--flag=hslua:lua_32bits"
     ARCH: "x86"
+    CHOCO_OPTS: "--86"
   - STACK_VERSION: "windows-x86_64"
     STACK_ROOT: "c:\\sr64"
     STACK_YAML: "stack.yaml"
-    STACK: "%STACK_ROOT%\\stack.exe"
     STACK_FLAGS: ""
     ARCH: "x64"
+    CHOCO_OPTS: ""
 
 skip_commits:
   files:
@@ -46,7 +45,6 @@ matrix:
 
 cache:
   - "%STACK_ROOT%"
-  - "%WIXBIN%"
   # This is where stack install ghc by default, but we don't
   # cache it because it's too large:
   # - "c:\\Users\\appveyor\\AppData\\Local\\Programs\\stack"
@@ -58,9 +56,8 @@ cache:
 build: off
 
 install:
-  - '"%WIXBIN%"\candle -? || choco install wixtoolset'
-  - |
-      curl -ostack.zip -L --insecure http://www.stackage.org/stack/%STACK_VERSION% && 7z e stack.zip -o"%STACK_ROOT%" stack.exe
+  - choco install wixtoolset %CHOCO_OPTS%
+  - choco install haskell-stack %CHOCO_OPTS%
 
 # before_test:
 
@@ -68,10 +65,11 @@ test_script:
   # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
   # descriptor
   - |
-      %STACK% setup --stack-yaml %STACK_YAML% --no-system-ghc --install-ghc > nul
-      %STACK% path
-      echo "" | %STACK% clean
-      echo "" | %STACK% install --stack-yaml %STACK_YAML% %STACK_BUILD_OPTS% pandoc pandoc-citeproc %STACK_FLAGS%
+      stack --version
+      stack setup --stack-yaml %STACK_YAML% --no-system-ghc --install-ghc > nul
+      stack path
+      echo "" | stack clean
+      echo "" | stack install --stack-yaml %STACK_YAML% %STACK_BUILD_OPTS% %STACK_FLAGS% pandoc pandoc-citeproc
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
@@ -84,8 +82,8 @@ after_test:
       set VERSION=
       for /f "tokens=1-2 delims= " %%a in ('.\pandoc.exe --version') do ( if not defined VERSION set "VERSION=%%b" )
       echo %VERSION%
-      "%WIXBIN%\\candle" -arch %ARCH% -dVERSION=%VERSION% -dBINPATH=. *.wxs -out wixobj\
-      "%WIXBIN%\\light" -sw1076 -ext WixUIExtension -ext WixUtilExtension -cultures:en-us -loc Pandoc-en-us.wxl -out "pandoc-%STACK_VERSION%.msi" wixobj\*.wixobj
+      candle -arch %ARCH% -dVERSION=%VERSION% -dBINPATH=. *.wxs -out wixobj\
+      light -sw1076 -ext WixUIExtension -ext WixUtilExtension -cultures:en-us -loc Pandoc-en-us.wxl -out "pandoc-%STACK_VERSION%.msi" wixobj\*.wixobj
 
 artifacts:
   - path: 'windows\pandoc-%STACK_VERSION%.zip'
