--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,6 +66,7 @@ test_script:
   # descriptor
   - |
       stack --version
+      echo "extra-path: 'C:\Users\appveyor\AppData\Local\Programs\stack\i386-windows\msys2-20180531\mingw32\bin'" > %STACK_ROOT%/config.yaml
       stack setup --stack-yaml %STACK_YAML% --no-system-ghc --install-ghc > nul
       stack path
       echo "" | stack clean
