--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,24 +9,24 @@ environment:
       #    STACK_ROOT: "c:\\sr32"
       #    STACK_YAML: "stack.lts11.yaml"
       #    STACK: "%STACK_ROOT%\\stack.exe"
-      #    STACK_BUILD_OPTS: "--flag=hslua:lua_32bits"
+      #    STACK_FLAGS: "--flag=hslua:lua_32bits"
       #    ARCH: "x86"
       #  - STACK_VERSION: "windows-x86_64"
       #    STACK_ROOT: "c:\\sr64"
       #    STACK_YAML: "stack.lts11.yaml"
       #    STACK: "%STACK_ROOT%\\stack.exe"
-      #    STACK_BUILD_OPTS: ""
+      #    STACK_FLAGS: ""
       #    ARCH: "x64"
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
     STACK_YAML: "stack.yaml"
-    STACK_BUILD_OPTS: "--flag=hslua:lua_32bits"
+    STACK_FLAGS: "--flag=hslua:lua_32bits"
     ARCH: "x86"
     CHOCO_OPTS: "--x86"
   - STACK_VERSION: "windows-x86_64"
     STACK_ROOT: "c:\\sr64"
     STACK_YAML: "stack.yaml"
-    STACK_BUILD_OPTS: ""
+    STACK_FLAGS: ""
     ARCH: "x64"
     CHOCO_OPTS: ""
 
@@ -66,10 +66,9 @@ test_script:
   # descriptor
   - |
       stack --version
-      stack setup --stack-yaml %STACK_YAML% --no-system-ghc --install-ghc > nul
       stack path
       echo "" | stack clean
-      echo "" | stack install --stack-yaml %STACK_YAML% %STACK_BUILD_OPTS% pandoc pandoc-citeproc
+      echo "" | stack install --stack-yaml %STACK_YAML% %STACK_BUILD_OPTS% %STACK_FLAGS% pandoc pandoc-citeproc
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
