--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@ extra-deps:
 - HsYAML-0.1.1.1
 - yaml-0.9.0
 - github: jgm/foundation
-  commit: 4294e39
+  commit: '4294e39'
 # See https://github.com/haskell-foundation/foundation/pull/503
 # We can go back to released foundation when this is fixed.
 ghc-options:
