comment out 64-bit build.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,12 +21,12 @@ environment:
       #    STACK: "%STACK_ROOT%\\stack.exe"
       #    STACK_FLAGS: ""
       #    ARCH: "x64"
-  - STACK_VERSION: "windows-x86_64"
-    STACK_ROOT: "c:\\sr64"
-    STACK_YAML: "stack.yaml"
-    STACK_FLAGS: ""
-    ARCH: "x64"
-    CHOCO_OPTS: ""
+      # - STACK_VERSION: "windows-x86_64"
+      #    STACK_ROOT: "c:\\sr64"
+      #    STACK_YAML: "stack.yaml"
+      #    STACK_FLAGS: ""
+      #    ARCH: "x64"
+      #    CHOCO_OPTS: ""
   - STACK_VERSION: "windows-i386"
     STACK_ROOT: "c:\\sr32"
     STACK_YAML: "stack.yaml"
