--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -340,8 +340,6 @@ custom-setup
 
 library
   build-depends: base >= 4.7 && < 5,
-                 base-compat,
-                 scientific,
                  syb >= 0.1 && < 0.8,
                  containers >= 0.4.2.1 && < 0.6,
                  unordered-containers >= 0.2 && < 0.3,
@@ -388,7 +386,8 @@ library
                  http-client-tls >= 0.2.4 && < 0.4,
                  http-types >= 0.8 && < 0.13,
                  case-insensitive >= 1.2 && < 1.3,
-                 HsYAML >= 0.1.1.1 && < 0.2
+                 HsYAML >= 0.1.1.1 && < 0.2,
+                 aeson-pretty >= 0.8.5 && < 0.9
   if impl(ghc < 8.0)
     build-depends: semigroups == 0.18.*,
                    -- basement 0.0.8 and foundation 0.0.21, transitive
@@ -412,7 +411,7 @@ library
   ghc-options:   -Wall -fno-warn-unused-do-bind
   default-language: Haskell2010
   other-extensions: NoImplicitPrelude
-  hs-source-dirs:  src, aeson-pretty
+  hs-source-dirs:  src
 
   exposed-modules: Text.Pandoc,
                    Text.Pandoc.App,
@@ -543,8 +542,7 @@ library
                    Text.Pandoc.UUID,
                    Text.Pandoc.Translations,
                    Text.Pandoc.Slides,
-                   Paths_pandoc,
-                   Data.Aeson.Encode.Pretty
+                   Paths_pandoc
   autogen-modules: Paths_pandoc
   buildable:       True
 
