--- a/stack.yaml
+++ b/stack.yaml
@@ -10,12 +10,19 @@ flags:
     debug: false
 packages:
 - '.'
+# See https://github.com/haskell-foundation/foundation/pull/503
+# We can go back to released foundation when this is fixed.
+- location:
+    git: https://github.com/jgm/foundation
+    commit: '4294e39'
+  subdirs:
+  - foundation
+  extra-dep: true
 extra-deps:
 - github: jgm/pandoc-citeproc
-  commit: 1037917087b2ca58c6d6424eaba62eb135858fc0
+  commit: 596872a5a5dec15f4c8848cf87dd72e0ef2f160d
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
-- network-2.7.0.2
 - yaml-0.9.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
